B-F Sandbox Full-Backup/src/objects/Wholesaler__c.object
<CustomObject>
    <description>Australia Wholesaler Object</description>
    <fields>
        <fullName>ACN__c</fullName>
        <label>ACN</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <formula>Account__r.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountNumber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Wholesalers</relationshipLabel>
        <relationshipName>Wholesalers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distributor_Group__c</fullName>
        <description>Wholesaler Transmission</description>
        <inlineHelpText>Wholesaler Transmission - This is used for Boomi</inlineHelpText>
        <label>Wholesaler Transmission</label>
        <picklist>
            <picklistValues>
                <fullName>ALM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HLW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ILG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others - Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others - Email</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checked is active</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LMAA_Number__c</fullName>
        <label>LMAA Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Code__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Do we need this field? It&apos;s not coming from ECC will this be loaded from Possum</inlineHelpText>
        <label>Legacy Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Wholesalers</relationshipLabel>
        <relationshipName>Wholesalers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SAP_Number__c</fullName>
        <externalId>true</externalId>
        <label>SAP Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Organization__c</fullName>
        <description>Sales Organization</description>
        <label>Sales Organization</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Code__c</fullName>
        <label>State Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wholesaler_Name__c</fullName>
        <description>Wholesaler Name</description>
        <inlineHelpText>Do we need this anymore....</inlineHelpText>
        <label>Wholesaler Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Wholesaler</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Wholesaler_Name__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Missing_Transmissions</fullName>
        <columns>NAME</columns>
        <columns>SAP_Number__c</columns>
        <columns>Distributor_Group__c</columns>
        <columns>State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Distributor_Group__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>startsWith</operation>
            <value>Sandeep</value>
        </filters>
        <label>Missing Transmissions</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>WholesalerName</fullName>
        <columns>NAME</columns>
        <columns>Wholesaler_Name__c</columns>
        <columns>AccountNumber__c</columns>
        <filterScope>Everything</filterScope>
        <label>WholesalerName</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Wholesaler_Ecc</fullName>
        <columns>NAME</columns>
        <columns>Distributor_Group__c</columns>
        <columns>SAP_Number__c</columns>
        <columns>State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UPDATEDBY_USER</field>
            <operation>startsWith</operation>
            <value>Sandeep</value>
        </filters>
        <label>Wholesaler - ECC</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Wholesaler</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wholesalers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>